# telepyth

./: .gitattributes  .gitignore  .telepythrc  LICENSE  README.md  api.go  main.go  pyproject.toml  requirements.txt  setup.py  storage.go  storage_test.go  telepyth.go
etc/: .telepythrc  telepyth.service  telepyth.toml
examples/: telepyth-advanced.ipynb  telepyth-basics.ipynb
srv/: api.go  log.go  main.go  storage.go  storage_test.go
telepyth/: __init__.py  cli.py  client.py  magics.py  multipart.py  utils.py  version.py
telepyth/integration/: __init__.py  huggingface.py  huggingface_test.py
test/: client_test.py  multipart_test.py
tools/: announce.go  deploy.sh  list-keys.go  migrate-db.go
